remove jquery dependency

--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>file upload demo</title>
     <script type="text/javascript" src="http://lib.sinaapp.com/js/jquery/2.0.3/jquery-2.0.3.min.js"></script>
-    <script type="text/javascript" src="ajax-file-upload.js"></script>
+    <script type="text/javascript" src="/src/ajax-file-upload.js"></script>
     <script type="text/javascript">
     $(function() {
 
