--- a/demo-without-jq.html
+++ b/demo-without-jq.html
@@ -4,10 +4,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>file upload without jquery demo</title>
-    <script type="text/javascript" src="https://www.promisejs.org/polyfills/promise-6.1.0.js"></script>
+    <script type="text/javascript" src="/libs/exif.js"></script>
+    <script type="text/javascript" src="/libs/Promise.js"></script>
+    <script type="text/javascript" src="/libs/jpeg_encoder_basic.js"></script>
     <script type="text/javascript" src="/src/ajax-file-upload-without-jq.js"></script>
     <script type="text/javascript">
         document.addEventListener("DOMContentLoaded", function (event) {
+            document.getElementById("ua").innerHTML = 'UA: ' + navigator.userAgent;
 
             var ajax = new ajaxUpload("myFile", {
                 action: 'upload.php',
@@ -19,10 +22,19 @@
                 document.getElementById("prog").value = value;
             });
 
+
             document.getElementById("upload").onclick = function () {
+                var st = (new Date()).valueOf();
                 ajax.upload().then(function (value) {
+                    var et = (new Date()).valueOf();
+                    var elapsedTime = (et - st);
+                    document.getElementById("elapsedTime").innerText = '上传耗时： ' + elapsedTime + 'ms'
+
+                    document.getElementById("res-container").innerText = JSON.stringify(value);
+                    document.getElementById("img-preview").src = value.url;
                     console.log('done', value);
                 }).catch(function (error) {
+                    document.getElementById("res-container").innerText = JSON.stringify(error);
                     console.log('error', error);
                 });
             };
@@ -32,10 +44,18 @@
 </head>
 
 <body>
-    <input id="myFile" type="file" multiple></input>
+    <input id="myFile" type="file"></input>
     <button id="upload">upload</button>
     <br />
-    <progress id="prog" value="0" min="0" max="100">
+    <progress id="prog" value="0" min="0" max="100"></progress>
+    <div id="res-container">
+
+    </div>
+    <br />
+    <img id="img-preview" src="" style="width:400px">
+    <br />
+    <div id='ua'></div>
+    <div id='elapsedTime'></div>
 </body>
 
 </html>
